--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,6 @@
     {% include scripts.html %}
 
   </body>
-  <!-- disqus js add -->
-  <script id="dsq-count-scr" src="//boguss-diary.disqus.com/count.js" async></script>
+  <!-- disqus js version -->
+  <!--<script id="dsq-count-scr" src="//boguss-diary.disqus.com/count.js" async></script>-->
 </html>
