--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,3 +6,22 @@
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+/**** custom ****/
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans+KR|Ubuntu+Mono); /* web font */
+
+html {
+    font-size: 12px; // change to whatever
+    
+    @include breakpoint($medium) {
+      font-size: 14px; // change to whatever
+    }
+  
+    @include breakpoint($large) {
+      font-size: 16px; // change to whatever
+    }
+  
+    @include breakpoint($x-large) {
+      font-size: 18px; // change to whatever
+    }
+  }
