--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,5 +15,11 @@
       {% include nav_list nav=page.sidebar.nav %}
     {% endif %}
   {% endif %}
+  {% if page.category_list %}
+    {% include category-list_sidebar.html %}
+  {% endif %}
+  {% if page.tag_list %}
+    {% include tag-list_sidebar.html %}
+  {% endif %}
   </div>
 {% endif %}
