--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,5 +1,5 @@
 ---
-layout: archive
+layout: single
 ---
 
 {{ content }}
@@ -27,6 +27,7 @@ s.setAttribute('data-timestamp', +new Date());
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 {% endif %}
 
+<!--
 <ul class="taxonomy__index">
   {% assign postsInYear = site.posts | where_exp: "item", "item.hidden != true" | group_by_exp: 'post', 'post.date | date: "%Y"' %}
   {% for year in postsInYear %}
@@ -51,3 +52,4 @@ s.setAttribute('data-timestamp', +new Date());
     <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
   </section>
 {% endfor %}
+-->
