--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -37,12 +37,14 @@ html {
 p{color: #666;}
 p>code{color: brown; background: #f0f0f0;}
 strong{/**/}
-h3{color: darksalmon;}
+h3{color: #f15f5f;}
 h2>a{font-size: 1em;}
 hr{border-color: #c4c4c4;}
 
 
 /* design */
 .page__taxonomy-item.category-item{width: 90%; margin-top: 5px;}
-.page__taxonomy-item.category-item>.category-count{color : darksalmon; font-weight: bold;}
-.greedy-nav .visible-links a:before{background-color: darksalmon; opacity: 0.5;}
+.page__taxonomy-item.category-item>.category-count{color : #f15f5f; font-weight: bold;}
+.greedy-nav .visible-links a:before{background-color: #f15f5f; opacity: 0.5;}
+.page__share{margin-top: 0px;}
+.page__share>a{width: 32.824%;}
