--- a/_includes/page__meta.html
+++ b/_includes/page__meta.html
@@ -17,7 +17,7 @@
 
       <span class="page__meta-readtime">
         <!--<i class="far {% if include.type == 'grid' and document.read_time and document.show_date %}fa-fw {% endif %}fa-clock" aria-hidden="true"></i>-->
-        {% if page.date %}{{ page.date | %m/%d/%Y }}">{% endif %}
+        {% if page.date %}{{ page.date | %m/%d/%Y }}"{% endif %}
         {% if words < words_per_minute %}
           {{ site.data.ui-text[site.locale].less_than | default: "less than" }} 1 {{ site.data.ui-text[site.locale].minute_read | default: "minute read" }}
         {% elsif words == words_per_minute %}
