--- a/_includes/page__meta.html
+++ b/_includes/page__meta.html
@@ -1,4 +1,6 @@
 {% assign document = post | default: page %}
+{% assign document.show_date = true %}
+{% assign document.read_time = false %}
 {% if document.read_time or document.show_date %}
   <p class="page__meta">
     {% if document.show_date and document.date %}
