--- a/_includes/page__meta.html
+++ b/_includes/page__meta.html
@@ -1,7 +1,7 @@
 {% assign document = post | default: page %}
+{% assign document.show_date = true %}
 {{ document.show_date }}
-{{ document.read_time }}
-{{ document.date | date: "%B %-d, %Y" }}
+{{ document.date | date: "%Y %m %d" }}
 {% if document.read_time or document.show_date %}
   <p class="page__meta">
     {% if document.show_date and document.date %}
