--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -66,13 +66,14 @@
 
   li {
     display: block;
+    width: 12.5%;
     float: left;
     margin-left: -1px;
 
     a {
       display: block;
       margin-bottom: 0.25em;
-      padding: 0.5em 1em;
+      padding: 10px 2px;
       font-family: $sans-serif;
       font-size: 14px;
       font-weight: bold;
@@ -82,6 +83,7 @@
       color: $muted-text-color;
       border: 1px solid mix(#000, $border-color, 25%);
       border-radius: 0;
+      font-size: 0.8em;
 
       &:hover {
         color: $link-color-hover;
