--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,12 +3,12 @@
 
 <!doctype html>
 <!--
-  Minimal Mistakes Jekyll Theme 4.20.2 by Michael Rose
+  Minimal Mistakes Jekyll Theme 4.24.0 by Michael Rose
   Copyright 2013-2020 Michael Rose - mademistakes.com | @mmistakes
   Free for personal and commercial use under the MIT license
   https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE
 -->
-<html lang="{{ site.locale | slice: 0,2 | default: "en" }}" class="no-js">
+<html lang="{{ site.locale | slice: 0,2 | default: "ko" }}" class="no-js">
   <head>
     {% include head.html %}
     {% include head/custom.html %}
@@ -39,6 +39,4 @@
     {% include scripts.html %}
 
   </body>
-  <!-- disqus js version -->
-  <!--<script id="dsq-count-scr" src="//boguss-diary.disqus.com/count.js" async></script>-->
 </html>
