--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -60,7 +60,7 @@ layout: default
     {% if jekyll.environment == 'production' and site.comments.provider and page.comments %}
       {% include comments.html %}
             
-      <!-- comment 추가 -->
+      <!-- comment -->
       {% if page.comments %}
       <div id="disqus_thread"></div>
       <script>
@@ -82,7 +82,7 @@ layout: default
       </script>
       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
       {% endif %}
-      <!-- // comment 추가 -->
+      <!-- // comment -->
     {% endif %}
   </article>
 
