--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -27,6 +27,7 @@ html {
   }
 
 /* 20210923 new */
+footer{text-align: center;}
 .page {
   @media (min-width: 80em) {
     width: 100%;
@@ -49,14 +50,12 @@ html {
 /* font color  */
 p{color: #666;}
 p>code{color: brown; background: #f0f0f0;}
-strong{/**/}
 h3{color: #f15f5f;}
 h2>a{font-size: 1em;}
 hr{border-color: #c4c4c4;}
 
 
 /* design */
-.page__taxonomy{overflow-y:scroll;height: 200px;}
 .page__taxonomy-item.category-item{width: 90%; margin-top: 5px;}
 .page__taxonomy-item.category-item>.category-count{color : #f15f5f; font-weight: bold;}
 .greedy-nav .visible-links a:before{background-color: #f15f5f; opacity: 0.5;}
