--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -27,7 +27,7 @@ html {
   }
 
 /* 20210923 new */
-footer{text-align: center;}
+footer.page__footer{text-align: center;}
 .page {
   @media (min-width: 80em) {
     width: 100%;
