리액트로그인 추가중

--- a/react-pages/src/index.css
+++ b/react-pages/src/index.css
@@ -11,3 +11,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.loginForm {display: block;padding: 20px;}
+.loginForm label{padding: 5px 10px;}
+.loginForm input {
+  background-color: #282c34;
+  border: none;
+  border-bottom: 1px solid lightblue;
+  padding: 5px 0px;
+  margin: 10px 0;
+  display: block;
+  text-align: center;
+}
+.loginForm .signInBtn{
+  background-color: #282c34; 
+  color: lightblue;
+  border: none;
+  padding: 5px 10px;
+  font-weight: 700;
+  width: 100%;
+  font-size: 0.8em;
+}
+
+.loginForm .signInBtn:hover{
+  transition: 1s;
+  transform: scaleX(1);
+  background-color: lightblue;
+  opacity: 0.5;
+  color: #282c34;
+}
