--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,8 @@
       </div>
     {% endif %}
 
+    {% include tags.html %}
+
     <div id="footer" class="page__footer">
       <footer>
         {% include footer/custom.html %}
